--- a/style.css
+++ b/style.css
@@ -15,8 +15,13 @@ main {
     background: #f8f8f8;
     height: 100vh;
 }
-
+.bg_regex * {
+    box-sizing: border-box;
+}
 .bg_regex {
+    box-sizing: border-box;
+    position: relative;
+    margin: 40px;
     padding: 20px;
     width: 300px;
     height: auto;
@@ -24,11 +29,41 @@ main {
     color: #fff;
 }
 
+#flags {
+    max-width: 30%;
+    float: right;
+}
+    #flags span { display:block; padding:5px; background:#f0f0f0; color:#333; border-radius:3px;
+    }
+        #flags ul {
+        position: absolute;
+        left: 7%;
+        top: 105px;
+        max-width: 86%;
+        background: #fff;
+        border-radius: 3px;
+        display: none;
+    }
+
+        #flags ul li {
+           
+            font-size:12px;
+            color:#333;
+            list-style: none;
+            display: block;
+            float: left;
+            margin:5px;
+        }
+
 h2 {
     margin-bottom: 20px;
 }
+#input_regex {
+ padding:5px;
 
-#text { padding:50px;
+}
+#text {
+    padding: 50px;
 }
 p {
     line-height: 22px;
