--- a/style.css
+++ b/style.css
@@ -32,10 +32,18 @@ main {
 #flags {
     max-width: 30%;
     float: right;
+
 }
     #flags span { display:block; padding:5px; background:#f0f0f0; color:#333; border-radius:3px;
+                  cursor:pointer;
+    }
+
+       #flags span:active { 
+         box-shadow:0.0em 0.0em 0.3em #222; color:#000;
+         user-select:none;
     }
         #flags ul {
+            box-shadow:0.0em 0.1em 0.2em #333;
         position: absolute;
         left: 7%;
         top: 105px;
